--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			
+   <plugin>
+     <groupId>com.google.cloud.tools</groupId>
+     <artifactId>appengine-maven-plugin</artifactId>
+     <version>2.2.0</version>
+     <configuration>
+		<projectId>demoautomobilefactory</projectId>
+		<version>GCLOUD_CONFIG</version>
+     </configuration>
+  </plugin>			
+			
 		</plugins>
 	</build>
 
