--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
@@ -60,6 +65,28 @@
 			<artifactId>spring-cloud-gcp-data-firestore</artifactId>
 		</dependency>		
 		
+				<dependency>
+			<groupId>org.sonarsource.scanner.maven</groupId>
+			<artifactId>sonar-maven-plugin</artifactId>
+			<version>3.7.0.1746</version>
+		</dependency>
+		
+<!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
+<dependency>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>0.8.6</version>
+</dependency>
+		
+	
+		<dependency>
+		    <groupId>io.projectreactor</groupId>
+		    <artifactId>reactor-test</artifactId>
+		    <version>3.3.9.RELEASE</version>
+		    <scope>test</scope>
+		</dependency>
+	
+		
 	</dependencies>
 
 	<build>
@@ -70,17 +97,58 @@
 			</plugin>
 			
 			
-   <plugin>
-     <groupId>com.google.cloud.tools</groupId>
-     <artifactId>appengine-maven-plugin</artifactId>
-     <version>2.2.0</version>
-     <configuration>
-		<projectId>demoautomobilefactory</projectId>
-		<version>GCLOUD_CONFIG</version>
-     </configuration>
-  </plugin>			
+		   <plugin>
+		     <groupId>com.google.cloud.tools</groupId>
+		     <artifactId>appengine-maven-plugin</artifactId>
+		     <version>2.2.0</version>
+		     <configuration>
+				<projectId>demoautomobilefactory</projectId>
+				<version>GCLOUD_CONFIG</version>
+		     </configuration>
+		  </plugin>			
+			
+			
+ <!-- JaCoCo configuration -->
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.6</version>
+            <executions>
+                <execution>
+                    <id>default-prepare-agent</id>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>default-report</id>
+                    <phase>prepare-package</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        			
+			
 			
 		</plugins>
+		
+		
 	</build>
+
+
+	<profiles>
+		<profile>
+			<id>sonar</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<!-- SERVER ON A REMOTE HOST -->
+				<sonar.host.url>http://localhost:9000</sonar.host.url>
+			</properties>
+		</profile>
+	</profiles>
 
 </project>
