--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,14 @@
 		    <scope>test</scope>
 		</dependency>
 	
+	
+		<!-- https://mvnrepository.com/artifact/com.google.firebase/firebase-admin -->
+		<dependency>
+		    <groupId>com.google.firebase</groupId>
+		    <artifactId>firebase-admin</artifactId>
+		    <version>7.1.1</version>
+		</dependency>
+	
 		
 	</dependencies>
 
